--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,7 @@ tqdm==4.66.1
 
 # Video/audio processing (USE THESE EXACT VERSIONS)
 ffmpeg-python==0.2.0
-moviepy==1.0.0  # Version that actually exists
-pydub==0.25.1
+--no-build-isolation moviepypydub==0.25.1
 imageio==2.31.1
 imageio-ffmpeg==0.4.8
 
@@ -16,7 +15,7 @@ gTTS==2.3.2
 
 # Translation
 deep-translator==1.9.2
-pysrt==1.1.2
+--no-build-isolation pysrt
 
 # Utilities
 loguru==0.7.2
